--- a/src/App.css
+++ b/src/App.css
@@ -131,3 +131,13 @@ margin-top: 8px;
 .captcha{
   padding-left: 45px;
 }
+.auth-position{
+  position: relative;
+}
+.eye-icon{
+  position: absolute;
+  left: 76%;
+  top: 34%;
+  font-size: 12px;
+  color: var(--black-color);
+}
